--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> D C O u t o m a t i c</title>
+  <title>___DCOutomatic___</title>
   <style>
     body {
       font-family: Arial, sans-serif;
