--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>___DCOutomatic___</title>
+  <title>DCOutomatic</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -54,7 +54,7 @@
   </style>
 </head>
 <body>
-  <h1>🎨 Generador de Creatividades</h1>
+  <h1>🎨 DCOutomatic</h1>
 
   <input type="file" id="imageUpload" accept="image/*" />
   <input type="text" id="textInput" placeholder="Escribe tu titular aquí..." />
