--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Generador de Creatividades</title>
+  <title>DCOutomatic</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -24,7 +24,7 @@
   </style>
 </head>
 <body>
-  <h1>🎨 Generador de Creatividades</h1>
+  <h1>🎨 DCOutomatic</h1>
 
   <label>Imagen 1: <input type="file" id="img1" accept="image/*"></label>
   <label>Imagen 2: <input type="file" id="img2" accept="image/*"></label>
