--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DCOutomatic</title>
+  <title>Generador de Creatividades</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -15,16 +15,31 @@
     input, button {
       margin-bottom: 10px;
       display: block;
+      width: 100%;
+      padding: 8px;
+      font-size: 16px;
+    }
+    button {
+      cursor: pointer;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 4px;
     }
     canvas {
       margin-top: 15px;
       border: 1px solid #ccc;
       display: block;
     }
+    #imgIA {
+      max-width: 100%;
+      margin-top: 10px;
+      border: 1px solid #ccc;
+    }
   </style>
 </head>
 <body>
-  <h1>🎨 DCOutomatic</h1>
+  <h1>🎨 Generador de Creatividades</h1>
 
   <label>Imagen 1: <input type="file" id="img1" accept="image/*"></label>
   <label>Imagen 2: <input type="file" id="img2" accept="image/*"></label>
@@ -44,6 +59,12 @@
 
   <canvas id="canvas2" width="160" height="600"></canvas>
   <button onclick="downloadCanvas('canvas2')">Descargar 160x600</button>
+
+  <hr>
+  <h2>🧠 Generar imagen con IA</h2>
+  <input type="text" id="prompt" placeholder="Describe la imagen que quieres..." />
+  <button onclick="generarConIA()">Generar con IA</button>
+  <img id="imgIA" />
 
   <script>
     const imgElements = [null, null, null];
@@ -78,7 +99,6 @@
       ctx.fillStyle = '#ffffff';
       ctx.fillRect(0, 0, width, height);
 
-      // Dibujar imágenes si están cargadas
       if (imgElements[0]) ctx.drawImage(imgElements[0], 0, 0, width / 2, height / 3);
       if (imgElements[1]) ctx.drawImage(imgElements[1], width / 2, 0, width / 2, height / 3);
       if (imgElements[2]) ctx.drawImage(imgElements[2], width / 4, height / 3, width / 2, height / 3);
@@ -86,7 +106,6 @@
       ctx.fillStyle = '#000';
       ctx.font = 'bold 16px sans-serif';
       ctx.fillText(text1, 10, height - 50);
-
       ctx.font = '14px sans-serif';
       ctx.fillText(text2, 10, height - 25);
     }
@@ -97,6 +116,43 @@
       link.download = `${id}.png`;
       link.href = canvas.toDataURL();
       link.click();
+    }
+
+    async function generarConIA() {
+      const prompt = document.getElementById('prompt').value;
+      const imgElement = document.getElementById('imgIA');
+
+      const response = await fetch('https://api.replicate.com/v1/predictions', {
+        method: 'POST',
+        headers: {
+          'Authorization': 'Token TU_TOKEN_DE_REPLICATE', // 🔁 reemplaza con tu token real
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({
+          version: "a9758cbf0b014e9e9c8e6c63f03c6533a2469ff7a6833d406a27c93e3c3fbb17",
+          input: { prompt }
+        })
+      });
+
+      const prediction = await response.json();
+      const endpoint = prediction.urls.get;
+      let result;
+
+      while (!result || result.status !== 'succeeded') {
+        const res = await fetch(endpoint, {
+          headers: { 'Authorization': 'Token TU_TOKEN_DE_REPLICATE' }
+        });
+        result = await res.json();
+        if (result.status === 'succeeded') break;
+        await new Promise(r => setTimeout(r, 1500));
+      }
+
+      imgElement.src = result.output[0];
+
+      // Auto usar como imagen 3
+      const img = new Image();
+      img.onload = () => imgElements[2] = img;
+      img.src = result.output[0];
     }
   </script>
 </body>
