--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
       while (!result || result.status !== 'succeeded') {
         const res = await fetch(endpoint, {
-          headers: { 'Authorization': 'Token TU_TOKEN_DE_REPLICATE' }
+          headers: { 'Authorization': r8_1mZlMDUEl41gamCLC3CyjtG9bqWlI7v0MtgQx }
         });
         result = await res.json();
         if (result.status === 'succeeded') break;
